--- a/views/signup1.hbs
+++ b/views/signup1.hbs
@@ -4,7 +4,45 @@
   <body>
     {{>navbar}}
 
-    {{>currState}}
+
+    <div class="container mt-3 container1">
+        <div class="box1">
+            <p class="curr1a" >1</p>
+            <p style="font-size: 12px;">CONTACT INFO</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >2</p>
+            <p style="font-size: 12px;">MEMBERSHIP</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >3</p>
+            <p style="font-size: 12px;">ADD DRIVERS</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >4</p>
+            <p style="font-size: 12px;">PAYMENT</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >5</p>
+            <p style="font-size: 12px;">REVIEW</p>
+        </div>
+    </div>
+
+
+
+
     <div class="container">
         <p style="font-size: 25px; margin-bottom:0px">Primary Contact Person</p>
         <p>Designated Employee Representative (DER)</p>
@@ -14,100 +52,100 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label class="form-label">First Name</label>
+                        <input type="text" class="form-control">
                     </div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Title (OPtional)</label>
-                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                <label  class="form-label">Title (OPtional)</label>
+                                <input type="text" class="form-control">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Phone</label>
-                                <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                <label  class="form-label">Phone</label>
+                                <input type="number" class="form-control">
                             </div>
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">New Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                        <label  class="form-label">New Password</label>
+                        <input type="password" class="form-control">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Last Name</label>
+                        <input type="text" class="form-control" >
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Email</label>
+                        <input type="email" class="form-control" >
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
+                        <label  class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control">
                     </div>
                 </div>
             </div>
             <p class="mt-5" style="font-size: 30px;" >Company Information</p>
             <hr>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Company Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label  class="form-label">Company Name</label>
+                <input type="text" class="form-control" >
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Last Name</label>
+                        <input type="text" class="form-control">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Phone</label>
-                        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Phone</label>
+                        <input type="number" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Address 1 (May not be P.O. Box Addresses)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Address 1 (May not be P.O. Box Addresses)</label>
+                        <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Fax</label>
-                        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Fax</label>
+                        <input type="number" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Address 2</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Address 2</label>
+                        <input type="text" class="form-control">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">City</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">City</label>
+                        <input type="text" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Referred By (optional)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">State</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">Referred By (optional)</label>
+                        <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Zip Code</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label  class="form-label">State</label>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <label  class="form-label">Zip Code</label>
+                        <input type="text" class="form-control">
                     </div>
                 </div>
             </div>
