--- a/views/signup2.hbs
+++ b/views/signup2.hbs
@@ -3,19 +3,58 @@
   {{>head}}
   <body>
     {{>navbar}}
-    {{>currState}}
+
+
+
+    <div class="container mt-3 container1">
+        <div class="box1">
+            <p class="curr1" >1</p>
+            <p style="font-size: 12px;">CONTACT INFO</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1a" >2</p>
+            <p style="font-size: 12px;">MEMBERSHIP</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >3</p>
+            <p style="font-size: 12px;">ADD DRIVERS</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >4</p>
+            <p style="font-size: 12px;">PAYMENT</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >5</p>
+            <p style="font-size: 12px;">REVIEW</p>
+        </div>
+    </div>
+
+
+
     <div class="container mt-5">
         <form action="/signup2" method="post">
             <p style="font-size: 30px; font-weight:500" >Choose Membership</p>
             <p>Choose your desired length of membership to the DOT Consortium.</p>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <input class="form-check-input" type="radio" name="flexRadioDefault">
                 <label class="form-check-label" for="flexRadioDefault1">
                     <b>1 Year Membership - $ 99.00</b>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" >
                 <label class="form-check-label" for="flexRadioDefault2">
                     <b>3 Year Membership - $ 199.00</b>
                 </label>
