--- a/views/signup3.hbs
+++ b/views/signup3.hbs
@@ -3,7 +3,46 @@
   {{>head}}
   <body>
     {{>navbar}}
-    {{>currState}}
+
+
+    <div class="container mt-3 container1">
+        <div class="box1">
+            <p class="curr1" >1</p>
+            <p style="font-size: 12px;">CONTACT INFO</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >2</p>
+            <p style="font-size: 12px;">MEMBERSHIP</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1a" >3</p>
+            <p style="font-size: 12px;">ADD DRIVERS</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >4</p>
+            <p style="font-size: 12px;">PAYMENT</p>
+        </div>
+        <div class="linebox">
+            <div class="line"></div>
+        </div>
+        <div class="box1">
+            <p class="curr1" >5</p>
+            <p style="font-size: 12px;">REVIEW</p>
+        </div>
+    </div>
+
+
+
+
     <div class="container mt-4">
         <p style="font-size: 30px; font-weight:500" >Add Drivers</p>
         <p>Upon Enrolling in the Consortium you can Add All your Active Drivers that have Negative Pre-Employment DOT Drug Test Results and have been in a Random Pool within the Previous 30 Days. DOT Requires a New Pre-Employment Drug Test if a Driver is not in a Random Pool for more than 30 Days.</p>
