--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,3 +185,16 @@
     width: 100%;
     background-color: #0a90cf;
 }
+.curr1a{
+    background-color: #e8f3c5;
+    height: 60px;
+    width: 60px;
+    border-radius: 30px;
+    margin-bottom: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #9ecf0a;
+    font-size: 30px;
+    font-weight: 500;
+}
