--- a/views/partials/homebody.hbs
+++ b/views/partials/homebody.hbs
@@ -11,7 +11,7 @@
                     <h3 >Unlimited Number of Drivers</h3>
                     <h1 class="mt-3">DOT Compliant Instantly!</h1>
                     <h3>Enrollment Certificate Emailed Immediately</h3>
-                    <form action="/login" method="get">
+                    <form action="/signup1" method="get">
                         <button type="submit" class="btn btn-primary mt-5">JOIN THE DOT CONSORTIUM NOW</button>
                     </form>
                     <h2 class="my-4"><b>Or Call: 800-341-1185</b></h2>
