--- a/views/signup1.hbs
+++ b/views/signup1.hbs
@@ -53,39 +53,39 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label class="form-label">First Name</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="fname">
                     </div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="mb-3">
-                                <label  class="form-label">Title (OPtional)</label>
-                                <input type="text" class="form-control">
+                                <label  class="form-label">Title (Optional)</label>
+                                <input type="text" class="form-control" name="title">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label  class="form-label">Phone</label>
-                                <input type="number" class="form-control">
+                                <input type="number" class="form-control" name="phone">
                             </div>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">New Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="password">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">Last Name</label>
-                        <input type="text" class="form-control" >
+                        <input type="text" class="form-control" name="lname">
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Email</label>
-                        <input type="email" class="form-control" >
+                        <input type="email" class="form-control" name="email" >
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="cpassword">
                     </div>
                 </div>
             </div>
@@ -93,13 +93,13 @@
             <hr>
             <div class="mb-3">
                 <label  class="form-label">Company Name</label>
-                <input type="text" class="form-control" >
+                <input type="text" class="form-control" name="cname">
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label  class="form-label">Last Name</label>
-                        <input type="text" class="form-control">
+                        <label  class="form-label">DOT Authority Number</label>
+                        <input type="text" class="form-control" name="dotnumber">
                     </div>
                 </div>
             </div>
@@ -107,21 +107,21 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">Phone</label>
-                        <input type="number" class="form-control">
+                        <input type="number" class="form-control" name="cphone">
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Address 1 (May not be P.O. Box Addresses)</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="address1">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label  class="form-label">Fax</label>
-                        <input type="number" class="form-control">
+                        <input type="number" class="form-control" name="fax">
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Address 2</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="address2">
                     </div>
                 </div>
             </div>
@@ -129,23 +129,23 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">City</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control"name="city">
                     </div>
                     <div class="mb-3">
                         <label  class="form-label">Referred By (optional)</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="referred">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">State</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="state" >
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mb-3">
                         <label  class="form-label">Zip Code</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="zipcode">
                     </div>
                 </div>
             </div>
