--- a/views/testimonials.hbs
+++ b/views/testimonials.hbs
@@ -80,8 +80,8 @@
                     <hr>
                     <p>Only</p>
                     <p style="font-weight: 500;  font-size:25px">$99 for 1 Year</p>
-                    <form action="/login" method="get">
-                        <button type="button" class="btn btn-success">Join the DOT Consortium</button>
+                    <form action="/signup1" method="get">
+                        <button type="submit" class="btn btn-success">Join the DOT Consortium</button>
                     </form>
                 </div>
             </div>
