--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -22,12 +22,18 @@
                         <li class="nav-item">
                             <a class="nav-link"style="color: blue;" href="/testimonials">Testimonials</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link"style="color: blue;" href="/signup1">Sign Up</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" style="color: blue;" href="/Member Login">Member Login</a>
-                        </li>
+                       {{#if status}}
+                            <li class="nav-item">
+                                <a class="nav-link"style="color: blue;" href="/logout">logout</a>
+                            </li>
+                        {{else}}
+                            <li class="nav-item">
+                                <a class="nav-link"style="color: blue;" href="/signup1">Sign Up</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: blue;" href="/memberLogin">Member Login</a>
+                            </li>
+                        {{/if}}
                         </ul>
                     </div>
                 </nav>
