--- a/views/signup2.hbs
+++ b/views/signup2.hbs
@@ -48,20 +48,20 @@
             <p style="font-size: 30px; font-weight:500" >Choose Membership</p>
             <p>Choose your desired length of membership to the DOT Consortium.</p>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault">
+                <input class="form-check-input" type="radio" name="plan" value="1">
                 <label class="form-check-label" for="flexRadioDefault1">
                     <b>1 Year Membership - $ 99.00</b>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" >
+                <input class="form-check-input" type="radio" name="plan" value="2">
                 <label class="form-check-label" for="flexRadioDefault2">
                     <b>3 Year Membership - $ 199.00</b>
                 </label>
             </div>
             <hr class="mt-5" >
             <p class="mt-5" style="font-size: 30px; font-weight:500" >Add Supervisor Training - $100.00 each</p>
-            <input type="text" name="hsd" id="" placeholder="Quantity">
+            <input type="text"  id="" placeholder="Quantity" name="quantity"> 
             <p class="mt-3">All supervisors are required to have supervisor training.</p>
             <hr class="mt-4">
             <p class="mt-5" style="font-size: 30px; font-weight:500" >Terms of Use</p>
