--- a/views/memberLogin.hbs
+++ b/views/memberLogin.hbs
@@ -11,13 +11,16 @@
                 <p class="text-center mt-3" style="font-size: 30px; font-weight:500">Login</p>
                 <form action="/memberLogin" method="post">
                     <div class="mb-3">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email">
+                        <input type="email" name="email" class="form-control" placeholder="email">
                     </div>
                     <div class="mb-3">
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" name="password" class="form-control" placeholder="Password">
                     </div>
                     <a href="/forgotPassword" class="">Click here if you forgot your Password</a>
                     <br>
+                    {{#if error}}
+                        <p style="color: red;" >Invalid Login detials</p>
+                    {{/if}}
                     <button type="submit" class="btn btn-primary loginbtn mt-2">Login</button>
                 </form>
             </div>
@@ -25,7 +28,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-md-3">
-                w
+                
             </div>
             <div class="col-md-6">
                 <div class="login1 pt-2 ps-2">
